--- a/mediatyper.html
+++ b/mediatyper.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Oblig 2 - Index</h1>
+        <h1>Oblig 2 - Media Typer</h1>
     </header>
     <nav>
         <a href="index.html">Hjem</a>
@@ -17,21 +17,16 @@
         <a href="mediatyper.html">Media Typer</a>
         <a href="csslayouts.html">CSS Layouts</a>
     </nav>
-    <main>
-        <article>
-            <h2>Github</h2>
-            <p>Bla bla bla om github</p>
-            <a href="github.html">Les mer!</a>
-        </article>
-        <article>
-            <h2>Media typer</h2>
-            <p>Bla bla bla om media typer</p>
-            <a href="mediatyper.html">Les mer!</a>
-        </article>        
-        <article>
-            <h2>CSS layouts</h2>
-            <p>Bla bla bla om CSS layouts</p>
-            <a href="csslayouts.html">Les mer!</a>
+    <main class="singlearticle">
+        <article id="bigarticle">
+            <h2>Media Typer</h2>
+            <p id="brodtekstartikkel">
+                Github er et kraftig git verktøy. Git er et system som sporer endringer gjort
+                til software kode. Dette verktøyet gjør det mulig å kollaberere med andre utviklere
+                på samme kode, se endringene gjort til den og ta i mot feil fra brukere. Eieren av
+                et prosjekt kan også velge hva som blir lagt til i koden gjennom pull requests.
+
+            </p>
         </article>
 
     </main>
@@ -53,6 +48,7 @@
         <section id="knappgithub">
             <a href="http://www.letmegooglethat.com/?q=What+is+github%3F">Hva er Github?</a>
         </section>
+        
     </aside>
 
     <footer>
