--- a/github.html
+++ b/github.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oblig 2</title>
     <link rel="stylesheet" type="text/css" href="stilsett/hovedstilsett.css">
+    <link href="stilsett/print.css" rel="stylesheet" media="print" />
 </head>
 <body>
     <header>
@@ -17,13 +18,13 @@
         <a href="mediatyper.html">Media Typer</a>
         <a href="csslayouts.html">CSS Layouts</a>
     </nav>
-    <main class="singlearticle">
-        <article id="bigarticle">
-            <h2>Github</h2>
+    <main class="artikkelmain">
+        <article id="hovedartikkel">
+            <h3 class="storartikkelh3">Github</h3>
             <p id="brodtekstartikkel">
                 Github er et kraftig git verktøy. Git er et system som sporer endringer gjort
                 til software kode. Dette verktøyet gjør det mulig å kollaberere med andre utviklere
-                på samme kode, se endringene gjort til den og ta i mot feilmeldinger fra brukere. Eieren av
+                på samme kode, se endringene gjort til den og ta i mot feilmeldinger fra brukere/testere. Eieren av
                 et prosjekt kan også velge hva som blir lagt til i koden gjennom pull requests. <br /><br />
 
                 Selv så synes jeg at github virker som et bra verktøy for å holde oversikt over versjoner du har laget
@@ -33,7 +34,7 @@
                 <br />  
                 <img class="githubbilde1" src="bilder/githubcommit1.png" alt="Github commit">
                 <br />
-                Fuck
+                Hei
             </p>
           
 
